# paddle_inference

./: .gitignore  Cargo.toml  Dockerfile.dev  build.rs  wrapper.h
.devcontainer/: devcontainer.json
examples/ocr/: Cargo.toml
src/: ctypes.rs  lib.rs  predictor.rs  tensor.rs
src/common/: mod.rs
src/config/: lite_engine.rs  mod.rs  model.rs  setting.rs
