[package]
name = "ocr"
version = "0.1.0"
edition = "2021"
authors = ["ZB_陈 <949536395@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = { version = "0.82.1", features = ["clang-runtime"] }
paddle_inference = { path = "../.." }
clap = { version = "4.0.29", features = ["derive"] }
